--- a/course.tex
+++ b/course.tex
@@ -7,15 +7,16 @@
 % \printactivityqrcodetrue
 
 \begin{document}
-    \author{Wim Obbels}
-    \title{Example Theory Module}
-    \begin{abstract}  A simple Ximera module \end{abstract}
-    \maketitle
+\author{Wim Obbels \and Bart Snapp}
+\title{An Example Activity Collection}
+\begin{abstract}
+    A simple collection of Ximera activites.
+\end{abstract}
+\maketitle
 
-\chapterstyle
-\part{All about Topic One}
-    \activity{firstTopic/theoryActivity.tex}
+% \chapterstyle
+% \part{All about Topic One}
+\activity{firstTopic/theoryActivity.tex}
 %     \practicesection{demo/exercises.tex}
-
 
 \end{document}
