--- a/course.tex
+++ b/course.tex
@@ -6,9 +6,11 @@
 % \printpartfrontpagefalse
 % \printactivityqrcodetrue
 
-\begin{document}
 \author{Wim Obbels \and Bart Snapp}
 \title{An Example Activity Collection}
+
+
+\begin{document}
 \begin{abstract}
     A simple collection of Ximera activites.
 \end{abstract}
@@ -16,7 +18,7 @@
 
 % \chapterstyle
 % \part{All about Topic One}
-\activity{firstTopic/theoryActivity.tex}
+\activity{firstTopic/firstTopic.tex}
 %     \practicesection{demo/exercises.tex}
 
 \end{document}
