--- a/course.tex
+++ b/course.tex
@@ -16,9 +16,25 @@
 \end{abstract}
 \maketitle
 
+%% So let's make a list of problems part one.
+\part{A list of exercises}
+%% BUT ISN'T "PART" KEY TO KU LEUVEN DEPLOY?
+%% WILL THIS BE NECESSARY?
+
+
+%% Next let's just do an activity... is chapterstyle necessary?
 % \chapterstyle
 % \part{All about Topic One}
 \activity{firstTopic/firstTopic.tex}
 %     \practicesection{demo/exercises.tex}
+
+%% Then let's do "enhanced" versions of the same thing.
+%% So they can see how they change
+
+
+
+
+
+
 
 \end{document}
