--- a/course.tex
+++ b/course.tex
@@ -18,6 +18,10 @@
 
 %% So let's make a list of problems part one.
 \part{A list of exercises}
+\activity{exercises/exerciseList}
+\practice{exercises/answer}
+\practice{exercises/multipleChoice}
+\practice{exercises/selectAll}
 %% BUT ISN'T "PART" KEY TO KU LEUVEN DEPLOY?
 %% WILL THIS BE NECESSARY?
 
