--- a/exercises/answer.tex
+++ b/exercises/answer.tex
@@ -1,8 +1,9 @@
 \documentclass{ximera}
 \begin{document}
 \begin{exercise}
-    Let $x$ be the number of people out of $100$ that LOVE Ximera.
-    How many people love Ximera?
+    Let $x$ be the number of people
+    out of $100$ that LOVE Ximera.
+    Find the value of $x$.
     \[
         x = \answer{100}
     \]
