--- a/exercises/multipleChoice.tex
+++ b/exercises/multipleChoice.tex
@@ -1,12 +1,12 @@
 \documentclass{ximera}
 \begin{document}
 \begin{exercise}
-    Why is Ximera the best thing since the chalkboard?
-    \begin{selectAll}
-        \choice[correct]{Turns \LaTeX into online materials easily}
-        \choice[correct]{Boosts student engagement}
-        \choice{Makes coffee and hugs you}
-        \choice[correct]{Open-source and free}
-    \end{selectAll}
+    Ximera is so awesome because it:
+    \begin{multipleChoice}
+        \choice{Feels like doing taxes}
+        \choice{Writing a book by hand}
+        \choice[correct]{A walk with free ice cream} 
+        \choice{Solving a puzzle blindfolded}
+    \end{multipleChoice}
 \end{exercise}
 \end{document}
