--- a/exercises/answer.tex
+++ b/exercises/answer.tex
@@ -2,8 +2,7 @@
 \begin{document}
 \begin{exercise}
     Let $x$ be the number of people
-    out of $100$ that LOVE Ximera.
-
+    out of $100$ that LOVE Ximera.\\
     
     Find the value of $x$.
     \[
