--- a/exercises/selectAll.tex
+++ b/exercises/selectAll.tex
@@ -3,7 +3,7 @@
 \begin{exercise}
     Why is Ximera the best thing since the chalkboard?
     \begin{selectAll}
-        \choice[correct]{Turns \LaTeX into online materials easily}
+        \choice[correct]{Turns \LaTeX\ into online materials easily}
         \choice[correct]{Boosts student engagement}
         \choice{Makes coffee and hugs you}
         \choice[correct]{Open-source and free}
