added comment on the name 'exerciseList'

--- a/exercises/exerciseList.tex
+++ b/exercises/exerciseList.tex
@@ -1,4 +1,10 @@
 \documentclass{ximera}
+%
+% Mmm, the filename exerciseList.tex is used for something completely different (namely a xourse!)
+% in https://github.com/mooculus/calculus/blob/master/applicationsOfIntegrals/exercises/exerciseList.tex
+%
+% I would not reuse the filename exerciseList for something unrelated (or is calculus-setup obsolete...?)
+%
 \author{Bart Snapp}
 \title{An exercise list}
 \begin{document}
