--- a/course.tex
+++ b/course.tex
@@ -17,11 +17,12 @@
 \maketitle
 
 %% So let's make a list of problems part one.
-\part{A list of exercises}
+\part{A list of exercises}  %% This "part" is load bearing
 \activity{exercises/exerciseList}
 \practice{exercises/answer}
 \practice{exercises/multipleChoice}
 \practice{exercises/selectAll}
+\practice{exercises/wordChoice}
 %% BUT ISN'T "PART" KEY TO KU LEUVEN DEPLOY?
 %% WILL THIS BE NECESSARY?
 
