--- a/course.tex
+++ b/course.tex
@@ -31,6 +31,7 @@
 % \chapterstyle
 % \part{All about Topic One}
 \activity{firstTopic/firstTopic.tex}
+\activity{graphicsInteractives/graphicsInteractives.tex}
 %     \practicesection{demo/exercises.tex}
 
 %% Then let's do "enhanced" versions of the same thing.
