--- a/graphicsInteractives/graphicsInteractives.tex
+++ b/graphicsInteractives/graphicsInteractives.tex
@@ -1,6 +1,6 @@
 \documentclass{ximera}
-\title{Images and Graphs}
-
+\title{Graphics and interactives}
+\author{Bart Snapp and Jason Nowell}
 \begin{document}
 \begin{abstract}
     A description of how images and graphs are rendered or included.
@@ -228,7 +228,11 @@ and include your worksheets like this:
             \end{center}
         \end{verbatim}      
 
-
+      
+      
+      \begin{center}
+        \desmosThreeD{k4ukgvsyai}{800}{600}
+      \end{center}
 
 
 
