--- a/graphicsInteractives/graphicsInteractives.tex
+++ b/graphicsInteractives/graphicsInteractives.tex
@@ -230,6 +230,11 @@ and include your worksheets like this:
 
       
       
+
+        \begin{center}
+          \desmosThreeD{k4ukgvsyai}{800}{600}
+        \end{center}
+
       \begin{center}
         \desmosThreeD{k4ukgvsyai}{800}{600}
       \end{center}
