--- a/graphicsInteractives/graphicsInteractives.tex
+++ b/graphicsInteractives/graphicsInteractives.tex
@@ -228,16 +228,19 @@ and include your worksheets like this:
             \end{center}
         \end{verbatim}      
 
-      
-      
+        \subsection{How to embed Desmos 3D}
+
+        https://www.desmos.com/3d/bb4exrhrl3
 
         \begin{center}
-          \desmosThreeD{k4ukgvsyai}{800}{600}
+          \desmosThreeD{bb4exrhrl3}{800}{600}
         \end{center}
-
-      \begin{center}
-        \desmosThreeD{k4ukgvsyai}{800}{600}
-      \end{center}
+        \begin{verbatim}
+          \begin{center}
+          \desmosThreeD{bb4exrhrl3}{800}{600}
+          \end{center}
+      \end{verbatim}    
+      
 
 
 
