use aligned for now; add link

--- a/firstTopic/secondActivity.tex
+++ b/firstTopic/secondActivity.tex
@@ -27,7 +27,8 @@ When writing sections of a textbook, another way to include questions is in the 
     \vec{p}_{\texttt{OH}} = (\underset{\text{White}}{9394878},\underset{\begin{smallmatrix}\text{African}\\ \text{American}\end{smallmatrix}}{1442655},\underset{\begin{smallmatrix}\text{Native}\\\text{American}\end{smallmatrix}}{20442},\underset{\text{Asian}}{268527},\underset{\text{Hawaiian}}{3907},\underset{\text{Other}}{544866}).
     \]
     The ordered tuples for each state in the Midwest looks like:
-  \begin{align*}
+  \[
+  \begin{aligned}
     \vec{p}_{\texttt{IA}} &= (2806418,117035,10538,79296,3941,132783)\\
     \vec{p}_{\texttt{IL}} &= (8874067,1796660,33972,709567,5196,1296702)\\
     \vec{p}_{\texttt{IN}} &= (5510354,631923,14030,158705,2205,379676)\\
@@ -40,7 +41,8 @@ When writing sections of a textbook, another way to include questions is in the 
     \vec{p}_{\texttt{OH}} &= (9394878,1442655,20442,268527,3907,544866)\\
     \vec{p}_{\texttt{SD}} &= (735228,18836,74975,12413,544,37340)\\
     \vec{p}_{\texttt{WI}} &= (4895065,367889,48674,163396,2672,329279)
-  \end{align*}
+  \end{aligned}
+  \]
   \begin{enumerate}
   \item What are the combined demographics of the states Michigan, Ohio,
     and Indiana?
