diff exercise/example

--- a/firstTopic/secondActivity.tex
+++ b/firstTopic/secondActivity.tex
@@ -95,4 +95,22 @@ while that is not the case for the exercises.
     %\end{xmmulticols}
 \end{example}
 
+Online here is no difference, but in the PDF only the exercise is a proper ´exercise':
+\begin{exercise}[Simple exercise of absolute values]
+
+    %\begin{xmmulticols}
+    \begin{enumerate}
+        \item $|5|=5$ and $|-5|=5$
+        \item $|\sqrt{2}-1| =
+              $\wordChoice{\choice[correct]{$\sqrt{2} -
+                          1$}\choice{$1-\sqrt{2}$}}
+        \item $|1-\sqrt{2}| =
+              $\wordChoice{\choice[correct]{$\sqrt{2} -
+                          1$}\choice{$1-\sqrt{2}$}}
+        \item $|2-\sqrt{2}| = $\wordChoice{\choice{$\sqrt{2} -
+                          2$}\choice[correct]{$2-\sqrt{2}$}}
+    \end{enumerate}
+    %\end{xmmulticols}
+\end{exercise}
+
 \end{document}
