--- a/course.tex
+++ b/course.tex
@@ -23,6 +23,7 @@
 \practice{exercises/multipleChoice}
 \practice{exercises/selectAll}
 \practice{exercises/wordChoice}
+\practice{exercises/hintsAndFollowUp.tex}
 %% BUT ISN'T "PART" KEY TO KU LEUVEN DEPLOY?
 %% WILL THIS BE NECESSARY?
 
