--- a/course.tex
+++ b/course.tex
@@ -7,19 +7,19 @@
 % \printactivityqrcodetrue
 
 \author{Wim Obbels \and Bart Snapp}
-\title{An Example Activity Collection}
+\title{A Basic Activity Collection}
 
 
 \begin{document}
 \begin{abstract}
-    A simple collection of Ximera activites.
+    A simple collection of Ximera activities, to be deployed online.
 \end{abstract}
 \maketitle
 
 
 %% Next let's just do an activity... is chapterstyle necessary?
 \part{All about Topic One}
-    \chapterstyle
+    \chapterstyle %% Not strictly necessary, makes the activities "Chapters" in our content
     \activity{firstTopic/firstActivity.tex}
     \activity{firstTopic/secondActivity.tex}
     \sectionstyle
@@ -46,15 +46,15 @@
 %% WILL THIS BE NECESSARY?
 
 
-%% Next let's just do an activity... is chapterstyle necessary?
-% \chapterstyle
-\part{Another part of the course}
-\activity{firstTopic/firstTopic.tex}
-\activity{graphicsInteractives/graphicsInteractives.tex}
-%     \practicesection{demo/exercises.tex}
+% %% Next let's just do an activity... is chapterstyle necessary?
+% % \chapterstyle
+% \part{Another part of the course}
+% \activity{firstTopic/firstTopic.tex}
+% \activity{graphicsInteractives/graphicsInteractives.tex}
+% %     \practicesection{demo/exercises.tex}
 
-%% Then let's do "enhanced" versions of the same thing.
-%% So they can see how they change
+% %% Then let's do "enhanced" versions of the same thing.
+% %% So they can see how they change
 
 
 \end{document}
