--- a/courseKUStyle.tex
+++ b/courseKUStyle.tex
@@ -7,7 +7,7 @@
 %\printactivityqrcodetrue
 
 \author{Wim Obbels \and Bart Snapp}
-\title{An Example Activity Collection}
+\title{An Activity Collection with Enhancements for Printing}
 
 
 \begin{document}
