--- a/course.tex
+++ b/course.tex
@@ -35,13 +35,13 @@
 
 
 %% So let's make a list of problems part one.
-\part{A list of exercises}  %% This "part" is load bearing
-\activity{exercises/exerciseList}
-\practice{exercises/answer}
-\practice{exercises/multipleChoice}
-\practice{exercises/selectAll}
-\practice{exercises/wordChoice}
-\practice{exercises/hintsAndFollowUp.tex}
+% \part{A list of exercises}  %% This "part" is load bearing
+% \activity{exercises/exerciseList}
+% \practice{exercises/answer}
+% \practice{exercises/multipleChoice}
+% \practice{exercises/selectAll}
+% \practice{exercises/wordChoice}
+% \practice{exercises/hintsAndFollowUp.tex}
 %% BUT ISN'T "PART" KEY TO KU LEUVEN DEPLOY?
 %% WILL THIS BE NECESSARY?
 
