added youtube... testing if it unfolds

--- a/graphicsInteractives/graphicsInteractives.tex
+++ b/graphicsInteractives/graphicsInteractives.tex
@@ -8,6 +8,11 @@
 \maketitle
 
 
+
+\section{Including images}
+
+
+
 \section{TikZ}
 The preferred way to include graphics is with TikZ.
 \begin{image}
@@ -49,9 +54,6 @@ The preferred way to include graphics is with TikZ.
 \end{verbatim}
 
 
-\section{Including images}
-
-
 Another method is to use \verb|\includegraphics|. Here we see an included a JPEG and a PNG:
 
 \begin{verbatim}
@@ -83,12 +85,24 @@ Here we have a pdf
 \end{center}
 
 
+\section{Videos}
+
+We can embed YouTube Videos with 
 
 
 
 
+\verb|\youtube{FvgF95i0_lw}| which would embed the video into the page, like this:
+\begin{center}
+        \youtube{FvgF95i0_lw}
+\end{center}
 
-
+\begin{exercise}
+  \youtube{FvgF95i0_lw}
+  \begin{exercise}
+    You watched the video! What's it about $\answer[format=string]{calculus}$
+  \end{exercise}
+\end{exercise}
 
 
 \section{The graph command}
