--- a/graphicsInteractives/graphicsInteractives.tex
+++ b/graphicsInteractives/graphicsInteractives.tex
@@ -67,8 +67,7 @@ In the code above, the command image is just a Ximera provided wrapper
 that can be redefined for printing. It does automatically resize
 content though and can be useful for showing images side-by-side:
 \begin{image}
-  
-  \includegraphics[width=2in\textwidth]{missionPatch.jpg}\qquad
+  \includegraphics[width=2in]{missionPatch.jpg}\qquad
 %% chimera.png is licensed under the Creative Commons Attribution-Share 
 %% Alike 3.0 Unported license.
 %% Attribution: I, Sailko
