--- a/graphicsInteractives/graphicsInteractives.tex
+++ b/graphicsInteractives/graphicsInteractives.tex
@@ -67,14 +67,21 @@ In the code above, the command image is just a Ximera provided wrapper
 that can be redefined for printing. It does automatically resize
 content though and can be useful for showing images side-by-side:
 \begin{image}
-  \includegraphics[width=2in]{missionPatch.jpg}\qquad
+  \includegraphics[width=5in]{missionPatch.jpg}\qquad
 %% chimera.png is licensed under the Creative Commons Attribution-Share 
 %% Alike 3.0 Unported license.
 %% Attribution: I, Sailko
 %% https://commons.wikimedia.org/wiki/File:Chimera_d%27arezzo,_fi,_04.JPG
   \includegraphics[width=.3\textwidth]{chimera.png}
 \end{image}
-
+\begin{center}
+  \includegraphics[width=5in]{missionPatch.jpg}\qquad
+%% chimera.png is licensed under the Creative Commons Attribution-Share 
+%% Alike 3.0 Unported license.
+%% Attribution: I, Sailko
+%% https://commons.wikimedia.org/wiki/File:Chimera_d%27arezzo,_fi,_04.JPG
+  \includegraphics[width=.3\textwidth]{chimera.png}
+\end{center}
 Here we have a pdf
 \begin{center}
   \includegraphics{llama.pdf}
