--- a/graphicsInteractives/graphicsInteractives.tex
+++ b/graphicsInteractives/graphicsInteractives.tex
@@ -64,8 +64,7 @@ Another method is to use \verb|\includegraphics|. Here we see an included a JPEG
 \end{image}
 \end{verbatim}
 In the code above, the command image is just a Ximera provided wrapper
-that can be redefined for printing. It does automatically resize
-content though and can be useful for showing images side-by-side:
+that can be redefined for printing.
 \begin{image}
   \includegraphics[width=5in]{missionPatch.jpg}%\qquad
 %% chimera.png is licensed under the Creative Commons Attribution-Share 
