--- a/exerciseList.tex
+++ b/exerciseList.tex
@@ -24,6 +24,7 @@
 \practice{exercises/selectAll}
 \practice{exercises/wordChoice}
 \practice{exercises/hintsAndFollowUp.tex}
+\practice{exercise/demo.tex}
 
 
 
