--- a/exerciseList.tex
+++ b/exerciseList.tex
@@ -24,8 +24,7 @@
 \practice{exercises/selectAll}
 \practice{exercises/wordChoice}
 \practice{exercises/hintsAndFollowUp.tex}
-\practice{exercise/demo.tex}
-
+\practice{exercises/demo.tex}
 
 
 \end{document}
