--- a/course.tex
+++ b/course.tex
@@ -1,5 +1,10 @@
 \documentclass{xourse}
 
+\input{preamble.tex}
+\graphicspath{  
+{./}
+{./graphicsInteractives/}
+}
 \author{Wim Obbels \and Bart Snapp}
 \title{A Basic Activity Collection}
 
