--- a/course.tex
+++ b/course.tex
@@ -1,7 +1,10 @@
 \documentclass{xourse}
 
-\input{preamble.tex}
-
+\input{preamble.tex} %% THIS SHOULD BE SUFFICIENT
+\graphicspath{  
+{./}
+{./graphicsInteractives/}
+}
 \author{Wim Obbels \and Bart Snapp}
 \title{A Basic Activity Collection}
 
