--- a/aFirstStepInXimera.tex
+++ b/aFirstStepInXimera.tex
@@ -15,8 +15,8 @@
 %% Next let's just do an activity... is chapterstyle necessary?
 %\part{All about Topic One}
    % \chapterstyle %% Not strictly necessary, makes the activities "Chapters" in our content
-    \activity{firstTopic/firstActivity.tex}
-    \activity{firstTopic/secondActivity.tex}
+    \activity{basics/basicAnswerTypes.tex}
+    \activity{basics/secondActivity.tex}
    % \sectionstyle
     % Note: You'd like to have a title with \activity ...
   %  \activity{firstTopic/exercises/ximerademo.tex}
