--- a/basics/basicAnswerTypes.tex
+++ b/basics/basicAnswerTypes.tex
@@ -68,6 +68,7 @@ Maybe you want a problem with one or more parts,
         \choice[correct]{A walk in the park with free ice cream} 
         \choice{Solving a puzzle blindfolded}
     \end{multipleChoice}
+    \begin{exercise}
     Why is Ximera the best thing since the chalkboard?
     \begin{selectAll}
         \choice[correct]{It turns \LaTeX\ into online materials}
@@ -85,13 +86,13 @@ Here we see an included a JPEG and a PNG:
 \begin{verbatim}
 \begin{image}
   \includegraphics[width=.3\textwidth]{missionPatch.jpg}\qquad
-  \includegraphics[width=3in]{}
+  \includegraphics[width=3in]{mx.png}
 \end{image}
 \end{verbatim}
 In the code above, the command image is just a Ximera provided wrapper
 that can be redefined for printing.
 \begin{image}
-  \includegraphics[width=5in]{missionPatch.jpg}%\qquad
+  \includegraphics[width=5in]{missionPatch.jpg}\qquad
   \includegraphics[width=.3\textwidth]{mx.png}
 \end{image}
 Here we have a pdf
