--- a/graphicsInteractives/graphicsInteractives.tex
+++ b/graphicsInteractives/graphicsInteractives.tex
@@ -56,22 +56,14 @@ Another method is to use \verb|\includegraphics|. Here we see an included a JPEG
 \begin{verbatim}
 \begin{image}
   \includegraphics[width=.3\textwidth]{missionPatch.jpg}\qquad
-%% chimera.png is licensed under the Creative Commons Attribution-Share 
-%% Alike 3.0 Unported license.
-%% Attribution: I, Sailko
-%% https://commons.wikimedia.org/wiki/File:Chimera_d%27arezzo,_fi,_04.JPG
-  \includegraphics[width=\textwidth]{chimera.png}
+  \includegraphics[width=\textwidth]{mx.png}
 \end{image}
 \end{verbatim}
 In the code above, the command image is just a Ximera provided wrapper
 that can be redefined for printing.
 \begin{image}
-  \includegraphics[width=5in]{missionPatch.jpg}%\qquad
-%% chimera.png is licensed under the Creative Commons Attribution-Share 
-%% Alike 3.0 Unported license.
-%% Attribution: I, Sailko
-%% https://commons.wikimedia.org/wiki/File:Chimera_d%27arezzo,_fi,_04.JPG
-  \includegraphics[width=.3\textwidth]{chimera.png}
+  \includegraphics[width=5in]{missionPatch.jpg}\qquad
+  \includegraphics[width=.3\textwidth]{mx.png}
 \end{image}
 Here we have a pdf
 \begin{center}
