--- a/aFirstStepInXimera.tex
+++ b/aFirstStepInXimera.tex
@@ -1,6 +1,6 @@
 \documentclass{xourse}
 
-\input{preamble.tex} %% THIS SHOULD BE SUFFICIENT
+\input{preamble.tex} %% Loads the graphics path
 
 \author{Wim Obbels \and Bart Snapp}
 \title{A First Step in Ximera}
@@ -11,21 +11,12 @@
 \end{abstract}
 \maketitle
 
-
-%% Next let's just do an activity... is chapterstyle necessary?
-%\part{All about Topic One}
-   % \chapterstyle %% Not strictly necessary, makes the activities "Chapters" in our content
-    \activity{basics/basicAnswerTypes.tex}
-    \activity{basics/secondActivity.tex}
-   % \sectionstyle
-    % Note: You'd like to have a title with \activity ...
-  %  \activity{firstTopic/exercises/ximerademo.tex}
-   % \chapterstyle
-    \activity{graphicsInteractives/graphicsInteractives.tex}
-    \practice{exercises/answer}
-    \practice{exercises/multipleChoice}
-    \practice{exercises/selectAll}
-    \practice{exercises/wordChoice}
-    \practice{exercises/hintsAndFollowUp}
-    \practice{exercises/demo}
+\activity{basics/basicAnswerTypes.tex}
+\activity{basics/graphicsInteractives.tex}
+\practice{exercises/answer}
+\practice{exercises/multipleChoice}
+\practice{exercises/selectAll}
+\practice{exercises/wordChoice}
+\practice{exercises/hintsAndFollowUp}
+\practice{exercises/demo}
 \end{document}
