--- a/basics/basicAnswerTypes.tex
+++ b/basics/basicAnswerTypes.tex
@@ -21,7 +21,6 @@ definitions like this one by a quick question. If you are ever curious about
 the source code, you can visit this source at
 
 \begin{center}
-
     \url{https://github.com/ximeraProject/ximeraFirstSteps/basics/basicAnswerTypes.tex}
 \end{center}
 
@@ -71,7 +70,7 @@ Maybe you want a problem with one or more parts,
     \begin{exercise}
     Why is Ximera the best thing since the chalkboard?
     \begin{selectAll}
-        \choice[correct]{It turns \LaTeX\ into online materials}
+        \choice[correct]{It turns $\LaTeX$ into online materials}
         \choice[correct]{It boosts student engagement}
         \choice{It makes coffee and hugs you}
         \choice[correct]{Its Open-source and free}
@@ -91,10 +90,10 @@ Here we see an included a JPEG and a PNG:
 \end{verbatim}
 In the code above, the command image is just a Ximera provided wrapper
 that can be redefined for printing.
-\begin{image}
+\begin{center}
   \includegraphics[width=5in]{missionPatch.jpg}\qquad
   \includegraphics[width=.3\textwidth]{mx.png}
-\end{image}
+\end{center}
 Here we have a pdf
 \begin{center}
   \includegraphics{llama.pdf}
