--- a/basics/basicAnswerTypes.tex
+++ b/basics/basicAnswerTypes.tex
@@ -73,7 +73,7 @@ Maybe you want a problem with one or more parts,
         \choice[correct]{It turns $\LaTeX$ into online materials}
         \choice[correct]{It boosts student engagement}
         \choice{It makes coffee and hugs you}
-        \choice[correct]{Its Open-source and free}
+        \choice[correct]{Its open-source and free}
     \end{selectAll}
 \end{exercise}
 \end{exercise}
