--- a/basics/basicAnswerTypes.tex
+++ b/basics/basicAnswerTypes.tex
@@ -37,6 +37,7 @@ or by appending \verb|.tex| to the URl of this page online. Here's an example:
 \end{definition}
 Now students can check their understanding:
 \begin{question}
+    Evaluate the following:
     \begin{enumerate}
         \item $|2-5| = \answer{3}$
         \item $|5-2| = \answer{3}$
