--- a/basics/basicAnswerTypes.tex
+++ b/basics/basicAnswerTypes.tex
@@ -100,7 +100,7 @@ In the code above, the command image is just a Ximera provided wrapper
 that can be redefined for printing.
 \begin{center}
   \includegraphics[width=5in]{missionPatch.jpg}\qquad
-  \includegraphics[width=.4\textwidth]{mx.png}
+  \includegraphics[width=5in\textwidth]{mx.png}
 \end{center}
 Here we have a pdf
 \begin{image}
