--- a/basics/basicAnswerTypes.tex
+++ b/basics/basicAnswerTypes.tex
@@ -76,7 +76,7 @@ Maybe you want a problem with one or more parts,
     \begin{exercise}
     Why is Ximera the best thing since the chalkboard?
     \begin{selectAll}
-        \choice[correct]{It turns $\LaTeX$ into online materials}
+        \choice[correct]{It turns LaTeX into online materials}
         \choice[correct]{It boosts student engagement}
         \choice{It makes coffee and hugs you}
         \choice[correct]{Its open-source and free}
@@ -99,8 +99,7 @@ Here we see an included a JPEG and a PNG:
 In the code above, the command image is just a Ximera provided wrapper
 that can be redefined for printing.
 \begin{center}
-  \includegraphics[width=5in]{missionPatch.jpg}\qquad
-  \includegraphics[width=5in\textwidth]{mx.png}
+  \includegraphics[width=5in]{missionPatch.jpg}\qquad\includegraphics[width=5in]{mx.png}
 \end{center}
 Here we have a pdf
 \begin{image}
